# TallyInsightsPro

./: .replit  app.py  deploy-windows.bat  deploy-windows.ps1  index.html  package-lock.json  package.json  pyproject.toml  replit.md  start-dev.bat  stop-servers.bat
.streamlit/: config.toml
attached_assets/: Pasted-Tally-Prime-Analytic-Dashboard-SaaS-App-Comprehensive-Report-Executive-Summary-This-report-detail-1759572251842_1759572251843.txt
backend/: main.py
client/: package.json  tailwind.config.js
client/src/: index.css
client/src/components/: Layout.jsx
client/src/context/: AuthContext.jsx
client/src/pages/: Analytics.jsx  Dashboard.jsx  Financial.jsx  Login.jsx  Purchase.jsx  Sales.jsx
pages/: 01_Dashboard.py  02_Sales_Reports.py  03_Purchase_Reports.py  04_Inventory_Management.py  05_Financial_Reports.py  06_Analytics.py  07_Settings.py
src/: App.jsx  alerts.py  analytics.py  auth.py  dashboard_components.py  index.css  reports.py  tally_api.py  utils.py
src/pages/: Inventory.jsx  Settings.jsx
